2009-11-10  Andreas Kupries  <andreask@activestate.com>

	* modules/coroutine: New module 'coroutine' providing to coroutine
	  utility packages for easier use of channel operations. These
	  packages are for Tcl 8.6+.

	* support/installation/modules.tcl: New module 'coroutine'.

2009-09-28  Andreas Kupries  <andreask@activestate.com>

	* support/devel/sak/test/run.tcl (::sak::test::run::CaptureStack):
	  Fix missing variable declaration, and tweak generated output a
	  bit.

	* support/devel/sak/test/run.tcl (Do): Reworked a bit to save
	  captured error stacks and failed tests (body, actual, expected)
	  into separate log files for quick access.

2009-07-10  Andreas Kupries  <andreask@activestate.com>

	* README.releasemgr: Added links to important places in the
	  SourceForge site for managing Tcllib releases and uploading
	  files (WebDAV), to avoid the ever more byzantine link sequences
	  needed to find them on their site.

2009-06-02  Andreas Kupries <andreask@activestate.com>

	* README.developer: Extended with more information about the basic
	  directory hierarchy and files to be found, testing and
	  validating modules, writing of test cases, and documentation.

2009-02-06  Andreas Kupries  <andreask@activestate.com>

	* support/installation/modules.tcl (Module): Put 'exif' on the
	  exclude list, deprecating it. Use 'jpeg' instead to access the
	  exif information block in images.

2009-01-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* examples/bibtex/bibtex.tcl: Modified examples to assume that
	* examples/htmlparse/webviewer.tcl: they are run by a tclsh found
	* examples/irc/irc_example.tcl: on the PATH, and that this shell
	* examples/mapproj/tkmap.tcl: has access to the packages of
	* examples/math/bigfloat.demo.tcl: Tcllib required by the example.
	* examples/ntp/rdate.tcl: Stuart Cassoff <stwo@users.sourceforge.net>
	* examples/sasl/saslclient.tcl: provided by the patches as